[APPREQ-708] Layout bug in safari/chromium : Synchronize button was accidentally hidden because of layout issues.
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@6304 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/cms-gwt/src/com/freshdirect/cms/ui/public/cmsgwt.css
+++ b/projects/cms-gwt/src/com/freshdirect/cms/ui/public/cmsgwt.css
@@ -249,9 +249,13 @@
 	background-color: #f2f2f2;
 	padding-top: 0px;
 }
-.x-form-field-wrap {
+.x-form-element .x-form-field-wrap {
 	width: auto ! important;
 }
+.x-form-group .x-form-field-wrap {
+	width: auto ! important;
+}
+
 
 /* ====== inheritance field ====== */
 .inheritable > table {
